# rc-submarine

./: .gitignore  README.md
controller/: CMakeLists.txt  COM.cpp  KeyboardHandler.cpp  KeyboardHandler.hpp  PacketHandler.cpp  PacketHandler.hpp  RemoteControl.cpp  RemoteControl.hpp  SerialPort.cpp  SerialPort.hpp  Status.cpp  Status.hpp  main.cpp
diver/: CMakeLists.txt  platformio.ini
diver/projectFilesBackup/: CMakeLists.txt
diver/src/: Logger.cpp  PowerManager.cpp  PowerManager.hpp  func.hpp  main.cpp
diver/src/Controllers/: BTS7960Controller.cpp  BTS7960Controller.hpp  BallastController.cpp  BallastController.hpp  CameraController.cpp  CameraController.hpp  DepthController.cpp  DepthController.hpp  EngineController.cpp  EngineController.hpp  L298Controller.cpp  L298Controller.hpp  LedController.cpp  LedController.hpp  ValveController.cpp  ValveController.hpp
diver/src/Interfaces/: IBridgeController.cpp  IBridgeController.hpp  IPowerMonitorable.cpp  IPowerMonitorable.hpp  ISetupable.hpp
diver/src/PinReader/: AnalogPinReader.cpp  AnalogPinReader.hpp  AnalogPinWriter.cpp  AnalogPinWriter.hpp  DigitalPinReader.cpp  DigitalPinReader.hpp  DigitalPinWriter.cpp  DigitalPinWriter.hpp  PinManager.cpp  PinManager.hpp
diver/src/RemoteControl/: ControlProtocol.cpp  ControlProtocol.hpp  RemoteControl.cpp  RemoteControl.hpp  protocol.hpp
diver/src/Security/: BatterySecurity.cpp  BatterySecurity.hpp  DepthSecurity.cpp  DepthSecurity.hpp  Security.cpp  Security.hpp  SecurityMonitor.cpp  SecurityMonitor.hpp  WaterSecurity.cpp  (+1 more)
docs/: arriere.fzz  calc.py
(+20 files in other folders)
